# CanaryCap

./: .gitignore  ADXL345_WIRING.md  CanaryCap.kicad_pro  DEVKIT_TESTING.md  I2C_ADXL345_FIXES.md  I2C_PULLUP_FIX.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_FIX.md  QUICK_REFERENCE.md  README.md  SOFTWARE_I2C_BITBANG.md  SOLUTION_SUMMARY.md  ZIGBEE_MESH_NETWORK.md  ZIGBEE_QUICKSTART.md
CanaryCap PCB/: #auto_saved_files#  CanaryCap.csv  CanaryCap.kicad_pcb  CanaryCap.kicad_prl  CanaryCap.kicad_pro  CanaryCap.kicad_sch  _autosave-CanaryCap.kicad_pcb  _autosave-CanaryCap.kicad_sch  _autosave-io.kicad_sch  fp-info-cache  io.kicad_sch  io.kicad_sch-bak  micro.kicad_sch  power.kicad_sch  rf.kicad_sch  sym-lib-table  ~CanaryCap.kicad_sch.lck
CanaryCap PCB/CanaryLib.pretty/: ESP-32-C6.bak  ESP-32-C6.kicad_sym  (+1 more)
CanaryCap-backups/: CanaryCap.csv  CanaryCap.kicad_pcb  CanaryCap.kicad_prl  CanaryCap.kicad_pro  CanaryCap.kicad_sch  CanaryCap.kicad_sch-bak  io.kicad_sch  io.kicad_sch-bak  micro.kicad_sch  power.kicad_sch  power.kicad_sch-bak  rf.kicad_sch  sym-lib-table  ~CanaryCap.kicad_pcb.lck
Integrate/: CMakeLists.txt  sdkconfig  sdkconfig 2.old  sdkconfig 5  sdkconfig.old
Integrate/main/: CMakeLists.txt  Simpler.c  esp_zb_switch.c  idf_component.yml  main.c  newmain.c  zb_alert.c  zb_alert.h  zb_canary_cluster.h  zb_cluster_manager.c  zb_cluster_manager.h  zb_device_registry.c  zb_device_registry.h  zb_mesh_network.c  zb_mesh_network.h
Justin-Branch/: CMakeLists.txt
src/: CMakeLists.txt  sdkconfig
src/main/: CMakeLists.txt  adc_cont.c  main.c
(+33 files in other folders)
